--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "^0.69.4",
@@ -19,7 +20,10 @@
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.16.0"
+    "react-native-screens": "^3.16.0",
+    "react-native-webview": "^11.23.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
